--- a/style/styles/dark_linux.qss
+++ b/style/styles/dark_linux.qss
@@ -1,8 +1,9 @@
 /*
- * Dark stylesheet for TeamSpeak 3 client
+ * Dark Extended stylesheet for TeamSpeak 3 client
  * Special file for Linux, loaded in addition to global dark.qss stylesheet
  *
- * Copyright (c) 2020 random-host.tv
+ * Copyright (c) 2019 random-host.tv
+ * Copyright (c) 2020 roshke.me
  */
 
 /* Remove default Qt icons from dialog box buttons */
